# ImitatorT

./: .cargoignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FRAMEWORK.md  README.md  TESTING_SUMMARY.md  build-optimization-validation.md  company_config.yaml  docker-compose.yml  skills-lock.json  ssh-controller.skill
.agents/skills/largomst-ducksearch/: SKILL.md
.codex/skills/imitatort-dev/: SKILL.md
.github/workflows/: cache-cleanup.yml  ci-cd.yml  cleanup-cache.yml  cross-build.yml  deploy-frontend.yml  docker-publish.yml  publish.yml  test.yml
deploy/: one_click_deploy.sh
deploy/agent/: Dockerfile  Dockerfile.cached  Dockerfile.chef  Dockerfile.instant
deploy/conduwuit/: conduwuit.toml
docs/: CACHE_BUILDER_ARCH.md  CACHE_BUILDER_PARALLEL.md  ULTRA_CACHE_STRATEGY.md  architecture.md  ci-cd-optimization.md  quickstart.md
examples/philosophy-demo/: Cargo.toml
examples/philosophy-demo/src/: main.rs
examples/simple_company/: Cargo.toml  README.md  company_config.yaml
examples/simple_company/src/: main.rs
examples/werewolf/: Cargo.toml  game.rs  main.rs  roles.rs
frontend/: eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/coverage/: index.html  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/utils/: helpers.ts.html  index.html
frontend/src/: App.tsx
frontend/src/hooks/: index.ts  useMediaQuery.ts  useWebSocket.ts
frontend/src/stores/: appStore.ts  authStore.ts  backendStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
frontend/tests/unit/: setupTests.ts  setupTestsForStoreMocks.ts
src/: a2a.rs  a2a_client.rs  a2a_server.rs  agent.rs  bootstrap.rs  config.rs  errors.rs  framework.rs  lib.rs  llm.rs  logger.rs  main.rs  matrix.rs  mcp.rs  output.rs  router.rs  store.rs  test_utils.rs  tool.rs
src/application/: company_runtime.rs  framework.rs  mod.rs  organization.rs  output.rs  tool.rs
src/application/autonomous/: agent.rs  mod.rs
src/application/organization/: guilty_line.rs
src/core/: agent.rs  capability.rs  capability_provider.rs  config.rs  messaging.rs  mod.rs  skill.rs  state.rs  tool.rs  tool_provider.rs  watchdog_agent.rs
src/core/store/: memory.rs  mod.rs
src/core/watchdog/: client.rs  condition.rs  mod.rs  poller.rs  rule.rs  scheduler.rs
src/domain/: agent.rs  capability.rs  invitation_code.rs  message.rs  mod.rs  org.rs  skill.rs  tool.rs  user.rs
src/infrastructure/: llm.rs  logger.rs  mod.rs
src/infrastructure/auth/: mod.rs
src/infrastructure/capability/: executor.rs  mcp_client.rs  mcp_server.rs  mod.rs  protocol_handler.rs
src/infrastructure/ldap/: bootstrap.rs  client.rs  config.rs  mod.rs  sync.rs
src/infrastructure/matrix/: appservice.rs  client.rs  config.rs  events.rs  mapper.rs  mod.rs  sync.rs  tuwunel_client.rs
src/infrastructure/store/: mod.rs  sqlite.rs
src/infrastructure/tool/: cargo_tools.rs  framework_tools.rs  github_tools.rs  mod.rs
src/infrastructure/web/: mod.rs
src/protocol/: client.rs  mod.rs  router.rs  server.rs  types.rs
src/utils/: mod.rs
tests/: README.md  ai_agent_behavior_tests.rs  application_autonomous.rs  application_framework.rs  backend_api_tests.rs  business_function_e2e_tests.rs  core_agent.rs  core_messaging.rs  core_store.rs  core_tool.rs  core_tool_provider.rs  core_watchdog.rs  default_tools.rs  domain_agent.rs  domain_agent_mode.rs  domain_message.rs  domain_org.rs  domain_tool.rs  group_creation_tests.rs  infrastructure_framework_tools.rs  infrastructure_llm.rs  infrastructure_logger.rs  infrastructure_store_sqlite.rs  infrastructure_tool.rs  integration_agent_watchdog.rs  integration_user_management.rs  message_storage_tests.rs  user_management_test.rs  watchdog_agent_default_registration.rs  web_auth_tests.rs
tests/capability/: client_tests.rs  domain_tests.rs  executor_tests.rs  integration_tests.rs  main.rs  protocol_tests.rs  provider_tests.rs  registry_tests.rs  server_tests.rs  skill_integration_tests.rs
tests/common/: mod.rs
tests/fixtures/: mod.rs
tests/integration/: agent_communication_test.rs  end_to_end_test.rs  message_routing_test.rs
tests/unit/application/: framework_tests.rs  output_tests.rs  tool_tests.rs
tests/unit/core/: config_tests.rs  messaging_tests.rs  store_tests.rs
(+54 files in other folders)
