[package]
name = "imitatort_stateless_company"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "sync", "net", "io-std", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
# 轻量级存储，可选启用
sled = { version = "0.34", optional = true }
# swarms-rs 多 Agent 框架
swarms-rs = "0.1"
dashmap = "6"
dotenv = "0.15"
# HTTP 服务端
axum = "0.7"
tower = "0.5"
# 配置解析
serde_yaml = "0.9"

[lib]
name = "imitatort_stateless_company"
path = "src/lib.rs"

[[bin]]
name = "imitatort"
path = "src/main.rs"

[features]
default = []
persistent-store = ["sled"]

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
